--- a/views/register.html
+++ b/views/register.html
@@ -8,5 +8,6 @@
         <input type="password" id="passwordValidate" name="passwordValidate" required>
         <button type="submit">Crear Usuario</button>
     </form>
-    <div id="message"></div>
+    <p>Ya tienes cuenta?. <a href="./login.html">Ingresar.</a></p>
+    <span id="message"></span>
 </section>
