--- a/views/login.html
+++ b/views/login.html
@@ -6,5 +6,13 @@
         <input type="password" id="password" name="password" required>
         <button type="submit">Iniciar Sesión</button>
     </form>
-    <div id="message"></div>
+    <div>
+        <p>no tienes cuenta?.  <a href="./register.html">Resgitrate.</a></p>
+        <span id="message"></span>
+    </div>
+
 </section>
+
+
+
+
